# dt-aicoder

./: .gitignore  AGENTS.md  NOTICES.md  README.md  aicoder.py  app-run-tests.py  build_zipapp.py  install-plugins.sh  install.sh  install_plugins.sh  memory_tool_design.md  pyproject.toml  pytest.ini  run-comprehensive-tests.sh  run-pytests.sh  run-tests.sh  run_comprehensive_tests.py  setup.py  test_prompt_command.py  test_runner.py  uninstall.sh
.aicoder/: dimmed.conf  history  settings-local.json
.dt-aicoder/: settings-local.json
aicoder/: AICODER.md  __init__.py  __main__.py  animator.py  api_client.py  api_handler.py  app.py  command_handlers.py  config.py  file_prompt.py  file_tracker.py  image_utils.py  input_handler.py  memory.py  message_history.py  persistent_config.py  planning_mode.py  prompt_history_manager.py  prompt_loader.py  readline_history_manager.py  retry_utils.py  stats.py  streaming_adapter.py  streaming_colorizer.py  terminal_manager.py  tool_call_executor.py  utils.py
docs/: README.md  development_workflow.md  memory_system.md  planning_mode.md  project_structure.md  prompt_overrides.md  prompts_command.md
example_configs/: auto_deny.txt
tests/: README.md  __init__.py  conftest.py  test_aicoder.py  test_api_client.py  test_argument_normalization.py  test_auto_compact.py  test_auto_compact_messaging.py  test_command_injection_security.py  test_compaction_logic.py  test_config.py  test_config_persistence_debug.py  test_config_show.py  test_connection_drop_retry.py  test_debug_retry_commands.py  test_edit_file_metadata.py  (+75 more)
(+235 files in other folders)
