[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicoder"
version = "0.8.0"
description = "An AI-assisted coding tool with MCP support"
readme = "README.md"
authors = [
    {name = "AI Coder Team"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/elblah/dt-aicoder"
Repository = "https://github.com/elblah/dt-aicoder"

[project.scripts]
aicoder = "aicoder.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicoder*"]

[tool.setuptools.package-data]
aicoder = ["**/*.md", "**/*.txt"]
